# neuroval3d

./: .gitignore  LICENSE  Makefile  NEUROVAL3D_FULL_CONTEXT.md  README.md  RUN_LOG.md  pyproject.toml
app/: README.md  serve.py
configs/: data.yaml  default.yaml  eval.yaml  model.yaml  validator.yaml
context v1/: aiml_review_final.pptx
css/: demo.css  styles.css
dashboard/: index.html
dashboard/css/: demo.css
dashboard/js/: app.js  demo.js  demo_cases.js
docs/: CHECKPOINTS.md  Minor Project Review 2.pptx  PHASE_1_2_REPORT.md  PROJECT_EXPLAINED.md  REVIEW_2_REPORT.md  architecture.md  datasets.md  paper_outline.md  strategy.md
js/: app.js  data.js  validators.js
notebooks/: 00_smoke_test.ipynb  01_vasari_demo.ipynb  02_perturbation_demo.ipynb  03_validator_demo.ipynb  04_benchmark_demo.ipynb  kaggle_phase2.ipynb  kaggle_phase2_full.ipynb  kaggle_phase3_concept_bottleneck.ipynb
scripts/: check_brats.py  download_atlases.py  download_brats_kaggle.py  download_radgenome_reports.py  download_textbrats_reports.py  generate_demo_mri.py  generate_explanation_pdf.py  generate_kaggle_notebook.py  generate_kaggle_phase2_full_notebook.py  generate_kaggle_phase3_notebook.py  generate_notebooks.py  generate_phase_summary_pdf.py  generate_review2_pdf.py  generate_review2_pptx.py  run_all_benchmarks.py  run_cross_only.py  run_smoke.py  setup_colab.sh  setup_kaggle.sh  synapse_login.py
src/neuroval3d/: __init__.py  cli.py
src/neuroval3d/data/: __init__.py  datasets.py  loaders.py  preprocessing.py  synthetic.py
src/neuroval3d/evaluation/: __init__.py  benchmark.py  metrics.py  paraphrase.py  perturbation.py
src/neuroval3d/grounding/: __init__.py  anatomy.py  vasari.py
src/neuroval3d/models/: __init__.py  decoder.py  encoder.py  projector.py
src/neuroval3d/utils/: __init__.py  (+3 more)
tests/: conftest.py  test_baselines.py  test_loaders.py  test_negation_lesion.py  test_numeric_modality.py  test_paraphrase.py  test_perturbation.py  test_preprocessing.py  test_radgenome_loader.py  test_smoke.py  test_synthetic.py  test_validator.py  test_vasari.py
(+13 files in other folders)
